// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`source.alias 1`] = `
"
;// CONCATENATED MODULE: ./src/a.ts
const a = 'hello world';

;// CONCATENATED MODULE: ./src/index.ts

console.info(a);

export { a };
"
`;

exports[`source.alias 2`] = `
"(() => { // webpackBootstrap
"use strict";
var __webpack_exports__ = {};

;// CONCATENATED MODULE: ./src/a.ts
const a = 'hello world';

;// CONCATENATED MODULE: ./src/index.ts

console.info(a);

var __webpack_export_target__ = exports;
for(var i in __webpack_exports__) __webpack_export_target__[i] = __webpack_exports__[i];
if(__webpack_exports__.__esModule) Object.defineProperty(__webpack_export_target__, '__esModule', { value: true });
})()
;"
`;
